added new test section

--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
             w Eastbourne na nawierzchni trawiastej, która w przyszłości stała się jej ulubioną.
         </p>
     </section>
+    <section id="początki-na-korcie" class="section">
+        <h2 class="section__header">Testowy nagłówek</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum vero, nesciunt dignissimos placeat distinctio sequi vitae fuga porro delectus at maxime totam perferendis. Doloremque quam itaque cum, deleniti culpa eius!
+        </p>
+    </section>
 
     <section id="kariera-zawodowa" class="section">
         <h2 class="section__header">Kariera zawodowa</h2>
