changed text in a test section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </section>
     <section id="początki-na-korcie" class="section">
         <h2 class="section__header">Testowy nagłówek</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum vero, nesciunt dignissimos placeat distinctio sequi vitae fuga porro delectus at maxime totam perferendis. Doloremque quam itaque cum, deleniti culpa eius!
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis provident tempora dolorem aperiam nostrum sequi! Optio voluptatibus similique nobis atque! Officia aliquam consequuntur molestias ullam accusantium delectus quam, aut quaerat.
         </p>
     </section>
 
