deleted sentence from section kariera

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             Janeiro. Do sukcesów Radwańskiej można zaliczyć również zwycięstwo z Jerzym Janowiczem w
             2015
             roku w
-            Pucharze Hopmana, czyli nieoficjalnych mistrzostwach świata drużyn mieszanych.
+            Pucharze Hopmana.
         </p>
     </section>
 
