--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polskie legendy tenisa</title>
+    <link rel="icon" href="images/tenis.jpg">
     <meta property="og:image" content="images/share.png">
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/body.css" rel="stylesheet">
