--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </ul>
     </nav>
 
+    <main>
     <section id="przedstawienie-postaci" class="section">
         <h2 class="section__header">Przedstawienie postaci</h2>
         <p> <b>Agnieszka Roma Radwańska</b>, urodzona 6 marca 1989 roku w Krakowie, jest najwybitniejszą polską
@@ -196,6 +197,7 @@
             jest prywatnymi pamiątkami i akcesoriami ze sportowego dorobku tenisistki.
         </p>
     </section>
+    </main>
 
     <aside>
         <h3 class="aside">Odnośniki</h3>
