js functions and images edits

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polskie legendy tenisa</title>
-    <link rel="icon" href="images/rakieta.jpg">
-    <meta property="og:image" content="images/share.png">
+    <link rel="icon" href="assets/rakieta.jpg">
+    <meta property="og:image" content="assets/share.png">
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/body.css" rel="stylesheet">
     <link href="css/navigation.css" rel="stylesheet">
@@ -32,7 +32,7 @@
 
     <h2 class="body__mainHeaders body__name">Agnieszka Radwańska</h2>
 
-    <p> <img class="body__gif" src="radwanska-indian.gif" alt="gif-agnieszka"> </p>
+    <p> <img class="body__gif" src="assets/radwanska-indian.gif" alt="gif-agnieszka"> </p>
 
     <nav>
         <ul class="navigation">
@@ -75,7 +75,7 @@
         </p>
     </section>
 
-    <img class="section__photo" width=365 height=250 src="images/agnieszka.png" alt="aga">
+    <img class="section__photo" width=365 height=250 src="assets/agnieszka.png" alt="aga">
     <p> <button class="section__button">Usuń zdjęcie</button> </p>
 
     <p class="section"> Wychowana w rodzinie o tradycjach sportowych, uczyła się gry w tenisa od ojca, <em>jednocześnie
